# beast-tracker

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  analysis.ipynb  animate-tracking.py  beast-tracker.cpp  cmake_install.cmake  demo.csv  eye-tracker  eye-tracker-dev.cpp  eye-tracker.cpp  eye-tracker.cpp.origin  fixate-lowres.csv  fixate-test.csv  fixate.csv  jester001.csv  jester002.csv  jug-novid.csv  jug-vid.csv  server-ao  server-ao.cpp  test.csv
.ipynb_checkpoints/: analysis-checkpoint.ipynb
bench/: README.txt  data.txt  latency-test  latency-test.c
bench-beast/: .gitignore  README.txt  beast-tracker  beast-tracker.cpp  myconfig.h
bench2/: flicker-screen  flicker-screen.c
development/: README.txt  ao_mmap  eye-tracker-server  eye-tracker-server.cpp  myconfig.h  server-ao  server-ao.cpp  server-ao.cpp.hold  server-ao.cpp.nobueno  stim_ao  stimulate_fromao.c  tmp-ao-server  tmp-ao-server.cpp
development/.libs/: lt-ao_mmap
laser-bench/: latency-test  latency-test.c
